new style added

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -23,7 +23,13 @@
       "imports": [
         "scss/normalize.scss",
         "scss/_bhromaon-section.scss",
-        "scss/_bhromaon-menu-section.scss"
+        "scss/_bhromaon-menu-section.scss",
+        "scss/_whoweare-section.scss",
+        "scss/_svg-section.scss",
+        "scss/_whatwedo-section.scss",
+        "scss/_travelwithus-section.scss",
+        "scss/_our-tourist-section.scss",
+        "scss/_footer-section.scss"
       ]
     }
   ],
